--- a/assign1_age_js.html
+++ b/assign1_age_js.html
@@ -7,7 +7,7 @@
     <title>assign1_js</title>
    
 </head>
-<script src="assign1_js.js"></script>
+<script src="assign1_age_js.js"></script>
 <body>
     <input type="number" id="age" placeholder="Enter your age"><br><br>
     <input type="date" placeholder="Choose your date of Birth" id="dob"  value=""><br><br>
